<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ThereYet d</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="admob_id">ca-app-pub-5747146577301976/8656866842</string>
    <string name="button_find">find</string>
    <string name="lat">Latitude</string>
    <string name="lon">Longitude</string>
    <string name="radius">Size</string>
    <string name="enter">Enter</string>
    <string name="exit">Exit</string>
    <string name="email_phone">Phone</string>
    <string name="message">Message</string>
    <string name="save">Save</string>
    <string name="Radius">radius</string>
    <string name="nickname_text">Name</string>
    <string name="positive_text">Yes</string>
    <string name="showcase_title">Tap and hold screen</string>
    <string name="showcase_message">add a new location</string>
    <string name="negative_text">Cancel</string>
    <string name="clear_all_text">Clear all geofences</string>

    <string-array name="radius_array">
        <item>radius</item>
        <item>5 meters</item>
        <item>20 meters</item>
        <item>50 meters</item>
        <item>100 meters</item>
        <item>150 meters</item>
        <item>200 meters</item>
        <item>500 meters</item>
    </string-array>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="short_there_yet_link">"\n -via ThereYet http://goo.gl/yDWo8o"</string>
    <string name="interstitial">ca-app-pub-5747146577301976/6620974447</string>

</resources>