<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dip"
    tools:context="com.yoneko.areyouthereyet.update.AddGeoFenceFragment" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="5dip"
         >

        <TableRow style="@style/tableStyle" >

            <TextView
                android:id="@+id/nickname_text"
                android:layout_weight=".3"
                android:text="@string/nickname_text" />

            <EditText
                android:id="@+id/nickname_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:nextFocusDown="@+id/radio_enter" />
        </TableRow>

        <TableRow style="@style/tableStyle" >

            <TextView
                android:id="@+id/radius_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="@string/radius" />

            <SeekBar
                android:id="@+id/radius_seekBar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:max="500" />
            <!--
             <EditText
            android:id="@+id/radius_edit"
            style="@style/wrapAll"
            android:inputType="number"
            android:nextFocusDown="@+id/email_edit" />
            -->
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left" >

            <RadioGroup
                android:id="@+id/enter_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio_enter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/enter" />

                <RadioButton
                    android:id="@+id/radio_exit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exit" />
            </RadioGroup>
        </TableRow>

        <TableRow style="@style/tableStyle" >

            <TextView
                android:id="@+id/email_text"
                style="@style/wrapAll"
                android:layout_weight=".3"
                android:text="@string/email_phone" />

            <AutoCompleteTextView
                android:id="@+id/email_edit"
                style="@style/wrapAll"
                android:layout_weight=".7"
                android:hint="Jane Doe 999-999-9999"
                android:nextFocusDown="@+id/message_edit"
                android:textColor="#000000"
                android:textColorHighlight="#000000"
                android:textColorLink="#000000"
                android:textStyle="bold" />
            <!--
                 <EditText
                android:id="@+id/email_edit"
                style="@style/wrapAll"
                android:layout_weight=".9"
                android:hint="415-260-1125"
                android:inputType="number"
                android:nextFocusDown="@+id/message_edit" />
            -->
        </TableRow>

        <TableRow style="@style/tableStyle" >

            <TextView
                android:id="@+id/message_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="@string/message" />

            <EditText
                android:id="@+id/message_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:hint="Hi! I made it home safely!"
                android:inputType="textMultiLine"
                android:isScrollContainer="true"
                android:lines="3"
                android:nextFocusDown="@+id/save_button" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <Button
                android:id="@+id/save_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"
                android:textAlignment="center" />
        </TableRow>
    </TableLayout>

</ScrollView> <!-- <RelativeLayout android:layout_gravity="bottom" android: -->
