<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- The main content view -->

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <com.sothree.slidinguppanel.SlidingUpPanelLayout
            xmlns:sothree="http://schemas.android.com/apk/res-auto"
            android:id="@+id/sliding_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            sothree:fadeColor="@android:color/transparent"
            sothree:panelHeight="@dimen/top_margin_slide_menu"
            sothree:shadowHeight="4dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:orientation="vertical"
                tools:context=".MainActivity" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <com.google.android.gms.ads.AdView
                        xmlns:ads="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/adView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        ads:adSize="BANNER"
                        ads:adUnitId="@string/admob_id" />

                    <RelativeLayout
                        android:id="@+id/topButtonLayout"
                        style="@style/wrapAll"
                        android:layout_below="@+id/adView" >

                        <Button
                            android:id="@+id/btn_find"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toLeftOf="@+id/radius_spinner"
                            android:text="@string/button_find" />

                        <Spinner
                            android:id="@+id/radius_spinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:entries="@array/radius_array"
                            android:prompt="@string/Radius"
                            android:spinnerMode="dropdown" />

                        <EditText
                            android:id="@+id/location_edit"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_toLeftOf="@id/btn_find"
                            android:hint="@string/search_location"
                            android:inputType="text"
                            android:text="9453 vollmerhausen drive, 21046" />
                    </RelativeLayout>
                </RelativeLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <fragment
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:map="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/map"
                        android:name="com.google.android.gms.maps.MapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        map:uiTiltGestures="false" />

                    <RelativeLayout
                        style="@style/wrapAll"
                        android:gravity="bottom" >

                        <ImageView
                            style="@style/wrapAll"
                            android:layout_marginBottom="200dip"
                            android:src="@drawable/ic_drawer" >
                        </ImageView>
                    </RelativeLayout>
                </FrameLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/map_detail_layout"
                android:layout_width="match_parent"
                android:layout_height="325dip"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/slide_tab_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|top"
                    android:paddingBottom="10dip"
                    android:text="Slide up to add GeoFence"
                    android:textSize="16sp" />

                <fragment
                    android:id="@+id/fragement_add_geo_fence"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    class="com.yoneko.areyouthereyet.AddGeoFenceFragment" >
                </fragment>
            </RelativeLayout>
        </com.sothree.slidinguppanel.SlidingUpPanelLayout>
    </FrameLayout>
    <!-- The navigation drawer -->

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#111"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />

</android.support.v4.widget.DrawerLayout>